--- a/sample/SampleServer/SampleServer.csproj
+++ b/sample/SampleServer/SampleServer.csproj
@@ -10,17 +10,17 @@
 
     <ItemGroup>
         <ProjectReference Include="../../src/Server/Server.csproj" />
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0" />
-        <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
-        <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
-        <PackageReference Include="System.IO.FileSystem.Primitives" Version="4.3.0" />
-        <PackageReference Include="System.IO" Version="4.3.0" />
-        <PackageReference Include="System.Runtime.Handles" Version="4.3.0" />
-        <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
-        <PackageReference Include="System.Text.Encoding.Extensions" Version="4.3.0" />
-        <PackageReference Include="System.Threading.Tasks" Version="4.3.0" />
-        <PackageReference Include="System.IO.Pipelines" Version="4.7.1" />
-        <PackageReference Include="Nerdbank.Streams" Version="2.4.60" />
+        <PackageReference Include="Microsoft.Extensions.Logging" />
+        <PackageReference Include="Serilog.Extensions.Logging" />
+        <PackageReference Include="Serilog.Sinks.File" />
+        <PackageReference Include="System.IO.FileSystem.Primitives" />
+        <PackageReference Include="System.IO" />
+        <PackageReference Include="System.Runtime.Handles" />
+        <PackageReference Include="System.Text.Encoding" />
+        <PackageReference Include="System.Text.Encoding.Extensions" />
+        <PackageReference Include="System.Threading.Tasks" />
+        <PackageReference Include="System.IO.Pipelines" />
+        <PackageReference Include="Nerdbank.Streams" />
     </ItemGroup>
 
 </Project>
